# tut-clickhouse

./: .env.example  .gitignore  README.md  config.xml  lesson01.sql  lesson02.sql  lesson03.sql  lesson04.sql  lesson05.sql  lesson06.sql  lesson07.py  lesson08.py  pyproject.toml
